@@ -11,9 +11,9 @@
 	<groupId>com.loco</groupId>
 	<artifactId>SparkCraft</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SparkJob</name>
+	<name>SparkCraft</name>
 	<description> SparkCraft seamlessly integrates the high-performance processing capabilities of Spark
-		with the robust features of Spring Boot, allowing you to unlock actionable insights from your data
+		with the robust features of Spring Boot
 		effortlessly.</description>
 	<properties>
 		<java.version>17</java.version>
@@ -42,14 +42,35 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.13</artifactId>
-			<version>3.5.1</version>
+			<version>3.4.2</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.13</artifactId>
-			<version>3.5.1</version>
+			<version>3.4.2</version>
 		</dependency>
+
+		<!-- IP dependencies -->
+
+		<dependency>
+			<groupId>com.googlecode.java-ipv6</groupId>
+			<artifactId>java-ipv6</artifactId>
+			<version>0.17</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -57,6 +78,20 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<configuration>
+					<argLine>--add-opens java.base/sun.nio.ch=ALL-UNNAMED</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--add-opens java.base/sun.nio.ch=ALL-UNNAMED</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
